# pyhmmer

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING  MANIFEST.in  README.md  meson.build  pyproject.toml  setup.cfg  setup.py
lib/easel/: decoy_config.h  easel.c  easel.h  esl_alloc.c  esl_alloc.h  esl_alphabet.c  esl_alphabet.h  esl_arr2.c  esl_arr2.h  esl_arr3.c  esl_arr3.h  esl_avx.c  esl_avx.h  esl_avx512.c  esl_avx512.h  esl_bitfield.c  esl_bitfield.h  esl_buffer.c  esl_buffer.h  esl_cluster.c  esl_cluster.h  esl_composition.c  esl_composition.h  esl_cpu.c  esl_cpu.h  esl_dirichlet.c  esl_dirichlet.h  esl_distance.c  esl_distance.h  esl_dmatrix.c  esl_dmatrix.h  esl_dsqdata.c  esl_dsqdata.h  esl_exponential.c  esl_exponential.h  esl_fileparser.c  esl_fileparser.h  esl_gamma.c  esl_gamma.h  esl_gencode.c  (+134 more)
lib/hmmer/: build.c  cachedb.c  cachedb.h  cachedb_shard.c  cachedb_shard.h  emit.c  errors.c  evalues.c  eweight.c  fm_alphabet.c  fm_general.c  fm_sse.c  fm_ssv.c  generic_decoding.c  generic_fwdback.c  generic_fwdback_banded.c  generic_fwdback_chk.c  generic_msv.c  generic_null2.c  generic_optacc.c  generic_stotrace.c  generic_viterbi.c  generic_vtrace.c  h2_io.c  heatmap.c  hmmd_search_status.c  hmmdmstr.c  hmmdmstr_shard.c  hmmdutils.c  hmmdwrkr.c  hmmdwrkr_shard.c  hmmer.c  hmmer.h  hmmlogo.c  hmmpgmd.h  hmmpgmd2msa.c  hmmpgmd_shard.h  logsum.c  meson.build  modelconfig.c  (+30 more)
lib/hmmer/impl_sse/: decoding.c  fwdback.c  impl_sse.h  io.c  meson.build  mpi.c  msvfilter.c  null2.c  optacc.c  p7_omx.c  p7_oprofile.c  ssvfilter.c  stotrace.c  vitfilter.c  vitscore.c
pyhmmer/: __init__.py  _getid.pxi  daemon.pxd  daemon.pyi  daemon.pyx  easel.pxd  easel.pyi  easel.pyx  errors.pyi  errors.pyx  exceptions.pxi  hmmer.py  hmmer.pyx  hmmpgmd.pxd  hmmpgmd.pyx  hmmsearch.py  iotools.pxd  iotools.pyx  meson.build  plan7.pxd  plan7.pyi  plan7.pyx  utils.py
pyhmmer/fileobj/: bsd.h  bsd.pxi  linux.h  linux.html  linux.pxd  linux.pxi  util.h
pyhmmer/libeasel/: alphabet.pxd  avx.pxd  buffer.pxd  composition.pxd  cpu.pxd  dmatrix.pxd  exponential.pxd  fileparser.pxd  gamma.pxd  gencode.pxd  graph.pxd  heap.pxd  histogram.pxd  hmm.pxd  huffman.pxd  hyperexp.pxd  keyhash.pxd  matrixops.pxd  mem.pxd  meson.build  minimizer.pxd  mixdchlet.pxd  msa.pxd  msacluster.pxd  random.pxd  scorematrix.pxd  sq.pxd  ssi.pxd  vec.pxd
pyhmmer/libeasel/msafile/: __init__.pxd  a2m.pxd  afa.pxd  meson.build  psiblast.pxd  selex.pxd
pyhmmer/libeasel/sqio/: __init__.pxd  ascii.pxd  meson.build  ncbi.pxd
pyhmmer/libhmmer/: fm.pxd  generic.pxd  h2_io.pxd  hmmpgmd.pxd  modelconfig.pxd  modelstats.pxd  nhmmer.pxd  p7_alidisplay.pxd  p7_bg.pxd  p7_builder.pxd  p7_domain.pxd  p7_domaindef.pxd  p7_hit.pxd  p7_hmm.pxd  p7_hmmfile.pxd  p7_pipeline.pxd  p7_prior.pxd  p7_profile.pxd  p7_scoredata.pxd  p7_spensemble.pxd  p7_tophits.pxd  p7_trace.pxd  tracealign.pxd
pyhmmer/libhmmer/impl_neon/: io.pxd  p7_omx.pxd
pyhmmer/libhmmer/impl_sse/: __init__.pxd  io.pxd  p7_omx.pxd  p7_oprofile.pxd
pyhmmer/libhmmer/impl_vmx/: io.pxd  p7_omx.pxd
pyhmmer/reexports/: esl_sqio_ascii.h  esl_sqio_ascii.pxd  p7_hmmfile.h  p7_hmmfile.pxd  p7_tophits.pxd
pyhmmer/tests/: meson.build  requirements.txt  test_doctest.py  test_errors.py  test_hmmer.py  utils.py
pyhmmer/tests/data/: meson.build
pyhmmer/tests/data/hmms/: meson.build
pyhmmer/tests/data/hmms/db/: PF02826.hmm.h3m  t2pks.hmm  (+13 more)
pyhmmer/tests/data/jackhmmer/: KR-3.sto  KR-4.sto  KR-5.sto  meson.build  p12748-1.sto  p12748-2.sto  p12748-3.sto
pyhmmer/tests/data/msa/: LuxC.faa  meson.build
pyhmmer/tests/data/seqs/: 1390.SAMEA104415756.OFHT01000022.fna  meson.build
pyhmmer/tests/data/tables/: RREFam.domtbl  RREFam.tbl  bmyD2.tbl  meson.build  t2pks.scan.tbl
pyhmmer/tests/test_easel/: __init__.py  meson.build  test_alphabet.py  test_bitfield.py  test_block.py  test_gencode.py  test_matrix.py  test_msa.py  test_msafile.py  test_randomness.py  test_sequence.py  test_sequencefile.py  test_ssi.py  test_vector.py
pyhmmer/tests/test_plan7/: __init__.py  meson.build  test_alignment.py  test_background.py  test_block.py  test_builder.py  test_hit.py  test_hmm.py  test_hmmfile.py  test_optimizedprofile.py  test_pipeline.py  test_profile.py  test_tophits.py  test_tracealigner.py  test_traces.py
src/: CMakeLists.txt
src/cmake/: CMakeLists.txt  PyHMMERConfig.cmake.in
src/easel/: CMakeLists.txt  esl_config.h.cmake  esl_config.h.in
src/hmmer/: CMakeLists.txt
src/hmmer/src/: CMakeLists.txt  p7_config.h.cmake  p7_config.h.in
src/pyhmmer/: CMakeLists.txt  __init__.py  _getid.pxi  _strings.pxi  daemon.pyi  daemon.pyx  easel.pxd  easel.pyi  easel.pyx  errors.pyi  errors.pyx  exceptions.pxi  hmmer.py  plan7.pxd  plan7.pyi  plan7.pyx  utils.py
src/pyhmmer/fileobj/: CMakeLists.txt  __init__.pxd  bsd.h  bsd.pxd  bsd.pyx  cookie.pxd  cookie.pyx  fun.h  fun.pxd  fun.pyx  linux.h  linux.pyx  win32.pxd  win32.pyx
src/pyhmmer/hmmer/: __init__.py  _base.py  _hmmalign.py  _hmmpress.py  _hmmscan.py  _hmmsearch.py  _jackhmmer.py  _nhmmer.py  _phmmer.py
src/pyhmmer/platform/: CMakeLists.txt  __init__.pxd  bsd.pxd  bsd.pyx  linux.h  linux.pxd  linux.pyx  win32.pxd  win32.pyx
src/pyhmmer/reexports/: esl_sqio_ascii.pxd  p7_hmmfile.pxd  p7_tophits.h
src/pyhmmer/tests/: test_doctest.py  test_errors.py  test_hmmer.py  utils.py
src/pyhmmer/tests/data/: README.md
src/pyhmmer/tests/test_easel/: __init__.py  test_alphabet.py  test_bitfield.py  test_block.py  test_keyhash.py  test_matrix.py  test_msa.py  test_msafile.py  test_sequence.py  test_sequencefile.py  test_ssi.py  test_vector.py
src/pyhmmer/tests/test_plan7/: test_alignment.py  test_background.py  test_block.py  test_builder.py  test_hit.py  test_hmm.py  test_hmmfile.py  test_optimizedprofile.py  test_pipeline.py  test_profile.py  test_tophits.py  test_traces.py
src/scripts/: apply_patch.py
src/scripts/cmake/: CythonExtension.cmake  Destatic.cmake  FindAVX2.cmake  FindNEON.cmake  FindSSE2.cmake  FindSSE4.cmake  FindVMX.cmake
(+321 files in other folders)
