[build-system]
build-backend = "mesonpy"
requires = ['meson-python', 'cython ~=3.0']

[project]
name = "pyhmmer"
version = '0.10.13'
description = 'Cython bindings and Python interface to HMMER3.'
readme = 'README.md'
requires-python = '>=3.6'
authors = [
    {name = 'Martin Larralde', email = 'martin.larralde@embl.de'},
]
keywords = ['bioinformatics', 'profile', 'HMM', 'sequence', 'pfam']
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "psutil ~=5.8"
]

[project.urls]
"Documentation" = "https://pyhmmer.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/althonos/pyhmmer/issues"
"Changelog" = "https://github.com/althonos/pyhmmer/blob/master/CHANGELOG.md"
"Coverage" = "https://codecov.io/gh/althonos/pyhmmer/"
"Builds" = "https://github.com/althonos/pyhmmer/actions"
"Paper" = "https://doi.org/10.1093/bioinformatics/btad214"
"PyPI" = "https://pypi.org/project/pyhmmer"

[tool.mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true

["tool.mypy-pyhmmer.tests.*"]
ignore_errors = true