[metadata]
name = hmmer
version = attr: hmmer.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/hmmer.py
description = Python interface to HMMER, a biological sequence analysis tool using profile HMMs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = posix
keywords = bioinformatics, profile, HMM, sequence, pfam
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Bug Tracker = https://github.com/althonos/hmmer.py/issues
    Changelog = https://github.com/althonos/hmmer.py/blob/master/CHANGELOG.md

[options]
zip_safe = false
packages = pyrodigal
include_package_data = true
setup_requires =
    setuptools >=46.4
    cython ~=0.29.16

[options.package_data]
hmmer = py.typed, *.pyi

[coverage:run]
plugins = Cython.coverage

[coverage:report]
include = hmmer/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
