libeasel_sources = files([
    '__init__.pxd',
    'alloc.pxd',
    'alphabet.pxd',
    'arr2.pxd',
    'arr3.pxd',
    'avx.pxd',
    'avx512.pxd',
    'bitfield.pxd',
    'buffer.pxd',
    'cluster.pxd',
    'composition.pxd',
    'cpu.pxd',
    'dirichlet.pxd',
    'distance.pxd',
    'dmatrix.pxd',
    'dsqdata.pxd',
    'exponential.pxd',
    'fileparser.pxd',
    'gamma.pxd',
    'gencode.pxd',
    'getopts.pxd',
    'gev.pxd',
    'graph.pxd',
    'gumbel.pxd',
    'heap.pxd',
    'histogram.pxd',
    'hmm.pxd',
    'huffman.pxd',
    'hyperexp.pxd',
    'json.pxd',
    'keyhash.pxd',
    'matrixops.pxd',
    'mem.pxd',
    'minimizer.pxd',
    'mixdchlet.pxd',
    'mixgev.pxd',
    'msa.pxd',
    'msacluster.pxd',
    'rand64.pxd',
    'random.pxd',
    'scorematrix.pxd',
    'sq.pxd',
    'ssi.pxd',
    'vec.pxd',
])

subdir('msafile')
subdir('sqio')